Добавили модели. Начали работу над репозиторием - учетные записи

--- a/CompanyNews/CompanyNews.csproj
+++ b/CompanyNews/CompanyNews.csproj
@@ -13,4 +13,16 @@
     <Content Include="Resources\Icons\novosti.ico" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+    <Folder Include="Services\" />
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.SqlServer.Server" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
