--- a/CompanyNews/CompanyNews.csproj
+++ b/CompanyNews/CompanyNews.csproj
@@ -15,6 +15,8 @@
 
   <ItemGroup>
     <Folder Include="ViewModels\ClientApp\" />
+    <Folder Include="ViewModels\UserControl\" />
+    <Folder Include="Views\UserControls\" />
   </ItemGroup>
 
   <ItemGroup>
