Добавили базовые элементы интерфеса в ЛК

--- a/CompanyNews/CompanyNews.csproj
+++ b/CompanyNews/CompanyNews.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Resources\Pictures\" />
     <Folder Include="ViewModels\ClientApp\" />
   </ItemGroup>
 
